kubernetes-manifest/base/clientdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
  namespace: emart-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-pod
  template:
    metadata:
      labels:
        app: client-pod
    spec:
      # serviceAccountName: aws-secret-sa
      imagePullSecrets:
      - name: ghcr-secret
      terminationGracePeriodSeconds: 120
      restartPolicy: Always
      # volumes:
      # - name: secrets-store-inline
      #   csi:
      #     driver: secrets-store.csi.k8s.io
      #     readOnly: true
      #     volumeAttributes:
      #       secretProviderClass: aws-secrets
      containers:
      - name: client-container
        image: ghcr.io/omotayoofere/client-api:sha-5ac395f
        ports:
        - containerPort: 4200
          name: client-port
        resources:
          requests:
            cpu: "0.2"
            memory: "100Mi"
          limits:
            cpu: "0.2"
            memory: "100Mi"
        # volumeMounts:
        #     - name: secrets-store-inline
        #       mountPath: /mnt/secrets
        #       readOnly: true
        readinessProbe:
          tcpSocket:
            port: client-port
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 5
        livenessProbe:
          tcpSocket:
            port: client-port
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 10
        startupProbe:
          tcpSocket:
            port: client-port
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
  namespace: emart-app
spec:
  selector:
    app: client-pod
  ports:
  - protocol: TCP
    port: 4200
    targetPort: client-port
