kubernetes-manifest/base/elasticsearch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: logging
spec:
  selector:
    matchLabels:
      app: elasticsearch-pod
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: elasticsearch-pod
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 120
      containers:
      - name: elasticsearch-container
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.12
        resources:
          requests:
            cpu: "0.5"
            memory: "500Mi"
          limits:
            cpu: "0.5"
            memory: "2Gi"
        volumeMounts:
          - name: elastic-vol
            mountPath: /usr/share/elasticsearch/data
        ports:
          - containerPort: 9200
            name: elastic-port
        readinessProbe:
          tcpSocket:
            port: elastic-port
          initialDelaySeconds: 120
          periodSeconds: 30
          failureThreshold: 5
        livenessProbe:
          tcpSocket:
            port: elastic-port
          initialDelaySeconds: 120
          periodSeconds: 30
          failureThreshold: 5
        startupProbe:
          tcpSocket:
            port: elastic-port
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 10
      volumes:
      - name: elastic-vol
        persistentVolumeClaim:
          claimName: elasticsearch-pvc
        
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-svc
  namespace: logging
spec:
  selector:
    app: elasticsearch-pod
  ports:
  - protocol: TCP
    port: 9200
    targetPort: elastic-port
