kubernetes-manifest/base/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
spec:
  selector:
    matchLabels:
      app: kibana-pod
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: kibana-pod
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 120
      containers:
      - name: kibana-container
        image: docker.elastic.co/kibana/kibana:7.17.0
        resources:
          requests:
            cpu: "0.5"
            memory: "200Mi"
          limits:
            cpu: "0.7"
            memory: "500Mi"
        ports:
          - containerPort: 5601
            name: kibana-port
        readinessProbe:
          tcpSocket:
            port: kibana-port
          initialDelaySeconds: 120
          periodSeconds: 30
          failureThreshold: 5
        livenessProbe:
          tcpSocket:
            port: kibana-port
          initialDelaySeconds: 120
          periodSeconds: 30
          failureThreshold: 5
        startupProbe:
          tcpSocket:
            port: kibana-port
          initialDelaySeconds: 60
          periodSeconds: 15
          failureThreshold: 5
        
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  namespace: logging
spec:
  selector:
    app: kibana-pod
  ports:
  - protocol: TCP
    port: 5601
    targetPort: kibana-port
