kubernetes-manifest/base/logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: logging
spec:
  selector:
    matchLabels:
      app: logstash-pod
  serviceName: "logstash-svc"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: logstash-pod
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 120
      volumes:
      - name: config-volume
        configMap:
          name: logstash-config
          items:
            - key: logstash.conf
              path: logstash.conf
      containers:
      - name: logstash-container
        image: docker.elastic.co/logstash/logstash:7.17.0
        resources:
          requests:
            cpu: "0.5"
            memory: "100Mi"
          limits:
            cpu: "0.5"
            memory: "100Mi"
        volumeMounts:
          - name: config-volume
            mountPath: /usr/share/logstash/pipeline/logstash.conf
            subPath: logstash.conf
        ports:
          - containerPort: 5044
            name: logstash-port
          - containerPort: 9600
        readinessProbe:
          tcpSocket:
            port: logstash-port
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 5
        livenessProbe:
          tcpSocket:
            port: logstash-port
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 10
        startupProbe:
          tcpSocket:
            port: logstash-port
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        
---
apiVersion: v1
kind: Service
metadata:
  name: logstash-svc
  namespace: logging
spec:
  clusterIP: None
  selector:
    app: logstash-pod
  ports:
  - protocol: TCP
    port: 5044
    targetPort: logstash-port
